# poool

./: .dockerignore  .editorconfig  .env.example  .env.fast-dev.example  .env.local-live.example  .gcloudignore  .gitignore  01_POOOL_RegulatoryBusinessTechnical_Whitepaper_2025_EN.md  AGENTS.md  AGENT_TASK_TRACKER.md  BROKEN_FEATURES.md  BROKEN_LOGICS.md  CONTRIBUTING.html  CONTRIBUTING.md  Dockerfile  E2E_COVERAGE_TRACKER.md  INVESTOR_OUTREACH_LIST.md  PRODUCTION_READINESS_AFFILIATE_TEAM.md  PRODUCTION_READINESS_REPORT.md  README.md  affiliate_system_fix_plan.md  apply_3col_cards.py  apply_horizontal_layout.py  apply_icons.py  backend_log.txt  cart_out.html  cloudbuild.yaml  compose.local-live.yml  deploy_safe.sh  family_office_email_templates.md  family_offices_focus.csv  find_mismatched_divs.py  fix_fonts.py  fix_fonts_final.py  fix_kyc_banner.py  fix_portfolio.py  fix_roadmap.py  fronts.fileloc  full_migration.sql  gcc_investors_complete_emails.xlsx  (+29 more)
backend/: .env.example  .env.production.template  .gcloudignore  Cargo.toml  README.md  broken_features.md  check_errors.txt  clippy_errors.txt  err3.txt  error.txt  error2.txt  fix.py  fix_main.py  fix_rust.py  fix_warnings.py  nohup.out  out.txt  output.txt  output2.txt  test_cart.py
backend/.cargo/: config.toml
backend/.sqlx/: query-003dbea7f7252d3bff038d98f45957ed8d491966468c5dd91261535263dd163b.json  query-016522643be0b673d6b731ccad879b1d11059bbce7bdbb7eceeda9254ef9f532.json  query-01835330b0d831990fd7603a60d2406817eb42500daa2650f2df60474c256fb6.json  query-031c1961870f78c1e5731926344635e7fb17811c789fc5d01ef4820655272abe.json  query-040c24b102bdb355855ee87fce336995003eecb708798ecc1f8e3a2962c2128c.json  query-053f7f5bcc26b07b52b898e5bbd49c5de54db8e7ef07334dea326810bc09da66.json  query-05fe0c0e41782143545099a8a4250d5e0ab6309a3e5016135f3408f20a53f5a4.json  query-066447294167e6def4fa17bf6d6f0b0e5bd525d35c3a90aafea338840664a10c.json  query-06ca9fd0de76a196d23c27640d030bdf6406b9cf99c77dd6d6fa1aaadf18419f.json  query-06ff75d4fe5d8fc36f7a8a4968a3536c883735164d5457478c6d46340cf8c3f9.json  query-0783906383d4a1194eb30edbcbc0ad2373bcc812207840a382b2a33ed494be95.json  query-07b945076fec599030d082c4dbad39aca3a6d70905a13cb0c50792281590edfe.json  query-09cd1df9d5c63f612ffe5eb059609aa5eb94b22cceeba544ad976da0fae4386a.json  query-0b7970e2b19174383b1829f605158011108e41e6ac63d6526ae993c9adc2f37c.json  query-0c799e9317848d329d37aee3a501f21bebe75150979c4f284b794bdc409066e3.json  query-0de09a7e48507eef7f905560a645ccb24c896d1e80df02b3668533ad36f4ccf5.json  query-0e28b987e2ed1a30437c1366e2d08e71957b9550363a619cb031ca0bbf3b8f06.json  query-0e2c5d5f4ec63c039853585a2f79e94ab29f15d2a08c1cd0642d1f7107a5a44d.json  query-0eda6ccea55dfc2778630e3105f1f9f7a6191b92a1d3b59603781963f61ca4ef.json  query-0f0be7cfef1310835f2dcb17b5c6ed2b027977b81043f08444506f6cd9e47812.json  query-0fa1e650a7b5c176de2fc3ad149c4b4d92c9e08224e75388b22504d66c319179.json  query-100fa25ce5badafcb28d8c30b8194d79deb60b6d5da173dde0a0cc08497e82e0.json  query-1036878aba525435f0e02f5c8a05d2b45b16e5b0be6c7280607c3a25b537de96.json  query-1057bcc49f1830ab98f71b4fb100acb4be154190e4c88c663326b3b55be2cb6f.json  query-1118da81936f693df6a93cff24100cfd0cc9d826cfd15bf3ef2287678392f779.json  query-118da1a541961c66c42aadcf26baac0427980f334fbe275258d0d82433daf14b.json  query-11953ed910e6cb4d8c59711dfc107d3a24e5197d7cccb42f0d9fdec9b1a6ce5a.json  query-11a42da6abfe46b2f0c528ea4d82fe3d9a39cff857062bbf865e4a3d8b23bdec.json  query-11c04d199f1e8218a2f36abbb16b7dbbb1cf180a2d49dc530d30050d51d036c9.json  query-1220e5abb214a6d5efe9d433a8051ac905f2dc2bacc0b359b2e403a0579c12f8.json  query-126e1d40541a774232029d2405322973a6cb2701d725a0a8f155c6e25623bad2.json  query-12eac6a897745c5c92a370b7a88681c4b327fee6c9038638e43081fcd185bd8b.json  query-14368cbbf0d7bc81b5689bcf3be5e9c7cd206904620a0b84313f18d444951985.json  query-14c62281d2421094f2426a8d088962d2babb0fa165d6a7d1da8ec8ae8632a8f1.json  query-162129b87589b78b93124b4197035686745c32d2d08979d1c0a7832ee07ddc2c.json  query-16e1fb6ea3e066a081408eaff4012de222ae90df34d3961b459c83aa2a89cffa.json  query-171e62b6fce09cfb6c01dc10e6529abc2e6a8dfcf104ee66ec879fa441f9dc90.json  query-1742f38ad8232c9886e13f123cb89c02474dc864b2b7ab3a2b2dbb678f454841.json  query-181767dd2423f5accc13be73426869802444a0c09b798669b5a58ba86a573b45.json  query-199aa9eb215f88e3a47d79d6f6c695a078452d3d70e01909cf2e2ed56b13dcdd.json  (+387 more)
backend/pgbouncer/: entrypoint.sh  pgbouncer.ini
backend/src/: cache.rs  config.rs  db.rs  email.rs  error.rs  inbox.rs  lib.rs  main.rs  metrics.rs  minijinja_test.rs  templates.rs
backend/src/admin/: access.rs  affiliate_teams.rs  approvals.rs  assets.rs  audit.rs  blockchain.rs  dashboard.rs  deposits.rs  developer_applications.rs  developer_projects.rs  emails.rs  extractors.rs  kyc.rs  legal.rs  marketplace.rs  mod.rs  notifications.rs  orders.rs  pages.rs  primary_escrow.rs  reports.rs  rewards.rs  search.rs  settings.rs  storage.rs  submissions.rs  support.rs  system.rs  treasury.rs  users.rs  villa_capex.rs  (+8 more)
backend/target-check/: .rustc_info.json
backend/templates/: login.html  signup.html
backend/tests/: admin_developer_applications_http.rs  affiliate_money_invariants.rs  affiliate_state_machine.rs  affiliate_team_integration.rs  auth_2fa_http.rs  checkout_wallet_http.rs  community_circles_http.rs  community_circles_rework.rs  community_profile_http.rs  developer_affiliate_team_http.rs  developer_annual_data_http.rs  developer_assets_http.rs  developer_change_requests_http.rs  developer_dashboard_http.rs  developer_drafts_http.rs  developer_onboarding_http.rs  developer_operations_http.rs  developer_ranking_http.rs  developer_workflow_e2e.rs  leaderboard_http.rs  leaderboard_integration.rs  leaderboard_production_audit.rs  leaderboard_roi_precision.rs  marketplace_bulk_retry_e2e.rs  marketplace_concurrent_load.rs  marketplace_settlement_e2e.rs  mint_token.rs  storage_phase1_audit.rs  storage_phase2_audit.rs  storage_phase3_audit.rs  storage_phase4_audit.rs  storage_phase5_audit.rs  test_admin_posts.rs  test_run.rs  test_storage.py  test_storage_analytics.py
(+3140 files in other folders)
