[package]
name = "poool-backend"
version = "0.1.0"
edition = "2021"
publish = false
default-run = "poool-backend"

# Library target: lets external integration tests (tests/) and the binary
# share the same code path. The library carries every module previously in
# main.rs; main.rs is now a thin `tokio::main` shim that calls run().
[lib]
name = "poool_backend"
path = "src/lib.rs"

[[bin]]
name = "poool-backend"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart", "ws"] }
axum-extra = { version = "0.9", features = ["cookie"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace", "compression-full"] }
tower = { version = "0.5", features = ["limit"] }

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "uuid", "chrono", "json", "macros", "rust_decimal", "ipnetwork"] }
rust_decimal = "1.33"

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Auth & Security
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
aes-gcm = "0.10"

# OAuth2
oauth2 = "5.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
web-push = { version = "0.10", default-features = false, features = ["hyper-client"] }

# Environment variables & utilities
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
time = "0.3"

# KYC Provider abstraction
async-trait = "0.1"
hmac = "0.12"
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"

# Ethereum signing & wallet operations.
# k256: secp256k1 curve for key derivation + EIP-191 / EIP-712 message
# verification (used by SIWE wallet-binding endpoint and the settlement
# signer). rlp: transaction encoding for in-process signing.
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
rlp = "0.5"
# GCP KMS asymmetric signer for the production settlement key path.
# When CHAIN_KMS_KEY is set the settler uses HSM-backed secp256k1 signing;
# private-key env path remains as fallback for local/dev.
google-cloud-kms = { version = "0.6", default-features = false, features = ["default-tls", "auth"] }

# Templating (for HTML responses to HTMX)
minijinja = { version = "2.0", features = ["loader"] }
redis = { version = "1.2.0", default-features = false, features = ["tokio-comp", "tls-rustls", "tokio-rustls-comp", "tls-rustls-webpki-roots", "tls-rustls-insecure"] }
deadpool-redis = { version = "0.23.0", features = ["tokio-comp", "tls-rustls", "tokio-rustls-comp", "tls-rustls-webpki-roots"] }
rustls = { version = "0.23", features = ["aws-lc-rs"] }
# Error handling
anyhow = "1.0"
totp-rs = { version = "5.6.0", features = ["gen_secret", "otpauth", "qr"] }

# File Storage (Google Cloud Storage)
google-cloud-storage = { version = "0.22", default-features = false, features = ["default-tls", "auth"] }
google-cloud-auth = { version = "0.17", default-features = false, features = ["default-tls"] }
mime_guess = "2.0"
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }

# Error monitoring & performance tracking
sentry = { version = "0.47", default-features = false, features = [
    "backtrace",
    "contexts",
    "panic",
    "reqwest",
    "rustls",
    "tracing",
    "tower",
] }
sentry-tracing = "0.47"
axum_csrf = "0.11.0"
url = "2.5.8"
ammonia = "4.1.2"
maplit = "1.0"
regex = "1.12.3"

# ─── Dev profile: optimize ALL dependencies ────────────────────
# Argon2 password hashing is UNUSABLY SLOW in debug mode (2+ minutes
# per hash on ARM Mac). This setting compiles all dependencies with
# optimizations while keeping our own code in fast debug mode.
# This is the recommended approach for crypto-heavy projects.
[profile.dev.package."*"]
opt-level = 2

# ─── Release profile: tuned for CI build speed ────────────────
# `lto = "thin"` keeps most LTO benefits at a fraction of the cost
# of full/fat LTO. `codegen-units = 16` parallelises codegen across
# cores (was implicitly 1 with full LTO). `incremental = false`
# is the safe default for clean CI builds. Strip symbols to shrink
# the final binary copied into the runtime image.
[profile.release]
lto = "thin"
codegen-units = 16
incremental = false
strip = "symbols"

# Dev-only: `util` feature unlocks tower::ServiceExt::oneshot, used by the
# HTTP integration tests in tests/leaderboard_http.rs to drive the router
# in-process without binding a real TCP listener. `http-body-util` provides
# `BodyExt::collect` for draining response bodies.
[dev-dependencies]
tower = { version = "0.5", features = ["limit", "util"] }
http-body-util = "0.1"
